--- a/components/c_hero-search.css
+++ b/components/c_hero-search.css
@@ -40,7 +40,7 @@
   padding-bottom: 15%;
   height: 70%;
   position: absolute;
-  z-index: 1;
+  z-index: 0;
   left: -54%;
   top: 0;
   border-radius: 100%;
