--- a/elements/header.css
+++ b/elements/header.css
@@ -3,13 +3,13 @@
   text-transform:uppercase;
   padding-bottom: 20px;
   position: relative;
-  z-index: 1001;
+  z-index: 2;
 }
 
 .header__wrapper {
   box-sizing: border-box;
   width: 100%;
-  z-index: 1001;
+  z-index: 2;
   background: white;
   will-change: transform;
   border-bottom:2px solid var(--bg-gray-dark);
@@ -154,7 +154,7 @@
   bottom:0;
   left:0;
   right:0;
-  z-index: 1001;
+  z-index: 2;
   animation: scrollDown 233ms ease-out forwards;
 }
 
